move tone.js to npm

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<script src="Tone.js"></script>
+<script src="node_modules/tone/build/Tone.js"></script>
 <style>
 
 </style>
